# Nomad

./: .cz.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  commitlint.config.js  requirements.txt  setup.cfg  setup.py  validate.sh
.github/workflows/: ci.yml  release.yml
data/: champions.json
data/assets/: dd_wr.csv
data/assets/classes/: role_weights.json
data/raw/: ratings_raw.json  ratings_raw.txt
data/static/: champion_rating_final.json
data/static/classes/: role_weights.md
data/test_lobby/: lobby.json  lobby_clean.json
docs/: branches.md  champion_classes.md  commits.md  docstring.md  release.md
scripts/: directory_tree.py  process_champion_classes.py  process_ratings.py  scraper_dd.py
scripts/misc/: champion_old.py  directory_tree.py
scripts/processing/: process_champion_classes.py  process_ratings.py
scripts/scraping/: scraper_dd.py
src/: __init__.py  main.py
src/api/: __init__.py  converter.py  data_handler.py  paths.py
src/api/client/: __init__.py  acquire.py  champion.py  lobby.py  sanitize.py  status.py
src/api/client_data/: acquire.py  champion.py  evaluator.py  lobby.py  sanitize.py  watcher.py
src/api/data_dragon/: data_dragon.py
src/core/: __init__.py  evaluator.py  watcher.py
src/core/watcher/: __init__.py  display.py  logging.py  watcher.py
src/cpp/: main.cpp
src/utils/: __init__.py  converter.py  paths.py
test/data/: validate_champion_keys.py
tests/: test_champion.py
tests/api/client/: test_acquire.py  (+4 more)
tests/client/: test_sanitize.py
tests/core/: test_evaluator.py  test_watcher.py
tests/data/: test_champion_keys.py  validate_champion_keys.py
tests/fixtures/: lobby_clean.json  sample_url.txt
tests/utils/: test_converter.py
(+7 files in other folders)
